<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

	<TextView
	    android:id="@+id/waktukomen"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="right"
	    android:gravity="right"
	    android:text="@string/waktu"
	    android:textColor="#000000"
	    android:textSize="10sp" />

	<TextView
	    android:id="@+id/nama_user"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/user"
	    android:textColor="@color/OrangeRed"
	    android:textColorHint="@color/OrangeRed" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/isikomen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/isi_komentar"
                android:textColor="@color/Black"
                android:textColorHint="@color/Black" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
