<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="5dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/Black"
        android:orientation="vertical" >

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="User"
            android:textColor="@color/MidnightBlue"
            android:textColorHint="@color/MidnightBlue"
            android:textColorLink="@color/MidnightBlue" />

        <TextView
            android:id="@+id/waktu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.42"
            android:gravity="right"
            android:text="@string/waktu"
            android:textColor="#000000" />

    </LinearLayout>

    <TextView
        android:id="@+id/judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="2dip"
        android:paddingTop="6dip"
        android:text="@string/judul"
        android:textColor="#dc6800"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Isidetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isi"
        android:textColor="@color/Black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/kode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textColor="#dc6800"
        android:textSize="16sp"
        android:visibility="gone" />
</LinearLayout>
    
</LinearLayout>