<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_launcher" android:contentDescription="TODO"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:paddingLeft="10dp"
        android:paddingRight="5dp">
        
        <TextView
            android:id="@+id/judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dip"
            android:paddingTop="6dip"
            android:text="@string/judul"
            android:textColor="#dc6800"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Isidetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/isi"
            android:textColor="@color/Black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dip"
            android:paddingTop="6dip"
            android:text="Waktu"
            android:textColor="#dc6800"
            android:textSize="17sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.11"
                android:text="Tanggal"
                android:textColor="@color/Black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/Tanggal_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="--"
                android:textColor="@color/Black"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.22"
                android:text="Jam"
                android:textColor="@color/Black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/waktu_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="--"
                android:textColor="@color/Black"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dip"
            android:paddingTop="6dip"
            android:text="Tempat"
            android:textColor="#dc6800"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tempat_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tempat"
            android:textColor="@color/Black"
            android:textSize="14sp" />

		<TextView
		    android:id="@+id/kode"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/id"
		    android:textColor="#dc6800"
		    android:textSize="16sp"
		    android:visibility="gone" >

        </TextView>
        </LinearLayout>

</LinearLayout>
